# Protei

./: .clang-format  .gitignore  CMakeLists.txt  README.md  String_parser.h  key_parser.cpp  key_parser.h
client/: CMakeLists.txt  Client.cpp  Client.h  Client_status.h  main.cpp  main.h
server/: CMakeLists.txt  Server.cpp  Server.h  Server_status.h  main.cpp  main.h
test/: CMakeLists.txt  Connection_test.cpp  String_parser_test.cpp  Transmition_test.cpp
